--- a/static/css/global.css
+++ b/static/css/global.css
@@ -2,22 +2,23 @@
 .form-style form input, .form-style form textarea, .form-style form select {
   width: 100%;
   padding: 0.75rem;
-  border: 2px solid #e5e7eb;
+  border: 2px solid #e5e7eb; /* border-gray-200 */
   border-radius: 0.375rem;
   background: #fff;
+  transition: all 0.2s ease-in-out;
 }
 
 .form-style form input:focus, .form-style form textarea:focus, .form-style form select:focus {
   outline: none;
-  border-color: #16a34a; /* green-600 */
-  box-shadow: 0 0 0 3px rgba(22,163,74,0.15);
+  border-color: #1f2937; /* abu-abu gelap (gray-800) */
+  box-shadow: 0 0 0 3px rgba(31, 41, 55, 0.15); /* bayangan abu-abu gelap */
 }
 
 .form-style input[type="checkbox"] {
   width: 1.25rem;
   height: 1.25rem;
   padding: 0;
-  border: 2px solid #d1d5db;
+  border: 2px solid #d1d5db; /* border-gray-300 */
   border-radius: 0.375rem;
   background-color: white;
   cursor: pointer;
@@ -25,11 +26,12 @@
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
+  transition: all 0.2s ease-in-out;
 }
 
 .form-style input[type="checkbox"]:checked {
-  background-color: #16a34a;
-  border-color: #16a34a;
+  background-color: #b02a29; /* merah kalem (red-700) */
+  border-color: #b02a29; /* merah kalem (red-700) */
 }
 
 .form-style input[type="checkbox"]:checked::after {
@@ -45,6 +47,6 @@
 
 .form-style input[type="checkbox"]:focus {
   outline: none;
-  border-color: #16a34a;
-  box-shadow: 0 0 0 3px rgba(22, 163, 74, 0.1);
+  border-color: #1f2937; /* abu-abu gelap (gray-800) */
+  box-shadow: 0 0 0 3px rgba(31, 41, 55, 0.15); /* bayangan abu-abu gelap */
 }
